<resources>
    <string name="app_name">Bekado Online</string>
    <string name="administrator">Admin Toko</string>
    <string name="key_antrian">antrian</string>
    <string name="status_menunggu_pembayaran">Menunggu Pembayaran</string>
    <string name="status_menunggu_konfirmasi">Menunggu Konfirmasi</string>
    <string name="key_proses">proses</string>
    <string name="status_dalam_proses">Dalam Proses</string>
    <string name="status_dalam_pengiriman">Dalam Pengiriman</string>
    <string name="key_selesai">selesai</string>
    <string name="status_selesai">Selesai</string>
    <string name="status_dibatalkan">Dibatalkan</string>
    <string name="no_internet_connection">Tidak ada koneksi internet</string>
    <string name="email_pass_salah">Email atau Password salah</string>
    <string name="pass_salah">Password salah</string>
    <string name="gagal_daftar_akun">Gagal mendaftarkan akun</string>
    <string name="berhasil_diupload">berhasil diupload</string>
    <string name="tidak_dapat_kosong">%1$s tidak dapat kosong</string>
    <string name="terlalu_singkat">%1$s terlalu singkat</string>
    <string name="terlalu_panjang">%1$s terlalu panjang</string>
    <string name="alamat_uncompleate">Alamat belum lengkap</string>
    <string name="pesanan_baru_berhasil">Pesanan baru berhasil dibuat</string>
    <string name="pesanan_baru_gagal">Gagal membuat pesanan baru</string>
    <string name="kategori_terhapus">Kategori telah dihapus</string>
    <string name="pilih_produk_dulu">Pilih produk terlebih dahulu</string>
    <string name="syarat_checkout">Minimal pembelanjaan Rp50.000</string>
    <string name="berhasil_ditambahkan">%1$s berhasil ditambahkan</string>
    <string name="berhasil_diperbarui">%1$s berhasil diperbarui</string>
    <string name="gagal_memperbarui_x">Gagal memperbarui %1$s</string>
    <string name="gagal_menambahkan_x_baru">Gagal menambahkan %1$s baru</string>
    <string name="tautan_reset_pw_sukses">Tautan reset password dikirim ke email Anda</string>
    <string name="masalah_database">Terjadi masalah pada database</string>
    <string name="status_pesanan_belom_pilih">Status pesanan belum dipilih</string>
    <string name="late_upload_bukti">Tidak bisa dilakukan pada status %1$s</string>
    <string name="kategori_unselected">Anda belum memilih Kategori</string>
    <string name="metode_pembayaran_unselected">Anda belum memilih Metode Pembayaran</string>
    <string name="location_not_found">Lokasi tidak ditemukan</string>
    <string name="restricted_admin">Admin tidak dapat mengakses keranjang</string>
    <string name="restricted_non_admin">Anda tidak memiliki akses Admin</string>
    <string name="account_problem">Akun tidak ditemukan. Akun akan dikeluarkan otomatis dari aplikasi.</string>
    <string name="gagal_ubah_jumlah_produk">Gagal mengubah jumlah produk</string>
    <string name="gagal_hapus_produk">Gagal menghapus produk%1$s</string>
    <string name="gagal_ubah_selected_produk">%1$s tidak dapat dipilih</string>
    <string name="detail_transaksi_not_found">%1$sDetail Transaksi tidak ditemukan</string>
    <string name="status_pesanan_response">Status pesanan %1$s diubah</string>
    <string name="tidak_dapat_menampilkan_x">Tidak dapat menampilkan %1$s</string>
    <string name="can_login_by_x">Anda dapat Login menggunakan %1$s Anda</string>
    <string name="x_berhasil_terhubung">%1$s berhasil terhubung</string>
    <string name="gagal_menghubungkan_x">Gagal menghubungkan %1$s</string>
    <string name="gagal_login_google">Terjadi kesalahan saat login dengan Google</string>
    <string name="different_email">Email akun Google yang dipilih tidak cocok dengan akun sekarang</string>
    <string name="miscast_google_akun">Terjadi kesalahan saat memilih akun Google</string>
    <string name="x_masih_kosong">%1$s masih kosong</string>
    <string name="press_back_again">Tekan sekali lagi untuk keluar</string>
    <string name="need_permission_location">Diperlukan izin akses lokasi</string>
    <string name="login">Login</string>
    <string name="lupa_password">Lupa password?</string>
    <string name="register">Register</string>
    <string name="batalkan">Batalkan</string>
    <string name="logout">Logout</string>
    <string name="tambah_ke_keranjang">Tambah ke Keranjang</string>
    <string name="pesan_sekarang">Pesan Sekarang</string>
    <string name="hapus">Hapus</string>
    <string name="simpan">Simpan</string>
    <string name="keluar">Keluar</string>
    <string name="record">Record</string>
    <string name="ubah">Ubah</string>
    <string name="tampilkan_lebih_sedikit">Tampilkan lebih sedikit</string>
    <string name="konfirmasi_pesanan">Konfirmasi Pesanan</string>
    <string name="transfer">Transfer</string>
    <string name="cod">COD</string>
    <string name="konfirmasi">Konfirmasi</string>
    <string name="lihat_pembayaran">Lihat pembayaran</string>
    <string name="simpan_bukti_pembayaran">Simpan Bukti Pembayaran</string>
    <string name="hapus_kategori">Hapus Kategori</string>
    <string name="hapus_produk">Hapus Produk</string>
    <string name="simpan_perubahan">Simpan Perubahan</string>
    <string name="reset_password">Reset Password</string>
    <string name="reset">Reset</string>
    <string name="hubungkan">Hubungkan</string>
    <string name="tambah_produk">Tambah Produk</string>
    <string name="edit_produk">Edit Produk</string>
    <string name="email_invalid">Email tidak sesuai format</string>
    <string name="min_8_char">Password minimal 8 karakter</string>
    <string name="min_9_angka">Nomor telepon minimal 9 angka</string>
    <string name="password_berbeda">Password berbeda</string>
    <string name="kode_pos_invalid">Kode pos invalid</string>
    <string name="alamat_terlalu_singkat">Alamat terlalu singkat</string>
    <string name="pastikan_no_error">Pastikan tidak ada pesan error</string>
    <string name="alamat_berhasil_save">Alamat berhasil disimpan</string>
    <string name="lokasi_sekarang_disave">Lokasi Anda sekarang telah disimpan</string>
    <string name="random">Random</string>
    <string name="sortir_a_z">Sortir A-Z</string>
    <string name="sortir_z_a">Sortir Z-A</string>
    <string name="harga_tertinggi">Harga Tertinggi</string>
    <string name="harga_terendah">Harga Terendah</string>
    <string name="title_beranda">Beranda</string>
    <string name="title_transaksi">Transaksi</string>
    <string name="title_profil">Profil</string>
    <string name="title_keranjang">Keranjang</string>
    <string name="title_checkout">Checkout</string>
    <string name="title_detail_transaksi">Detail Transaksi</string>
    <string name="title_pembayaran">Pembayaran</string>
    <string name="title_kategori_list">Kategori List</string>
    <string name="title_produk_list">Produk List</string>
    <string name="urutkan_berdasarkan">Urutkan Berdasarkan</string>
    <string name="edit_kategori">Edit Kategori</string>
    <string name="pilih_status_pesanan">Pilih Status Pesanan</string>
    <string name="titik_lokasi">Titik Lokasi</string>
    <string name="ubah_alamat">Ubah Alamat</string>
    <string name="alamat_penerima">Alamat Penerima</string>
    <string name="daftar_produk">Daftar Produk</string>
    <string name="rincian_pembayaran">Rincian Pembayaran</string>
    <string name="metode_pembayaran">Metode Pembayaran</string>
    <string name="ringkasan_pembayaran">Ringkasan Pembayaran</string>
    <string name="bukti_pembayaran">Bukti Pembayaran</string>
    <string name="info_pengiriman">Informasi Pengiriman</string>
    <string name="buka_di_google_maps">Buka di Google Maps</string>
    <string name="kategori_sekarang">Kategori Sekarang</string>
    <string name="akun_saya">Akun Saya</string>
    <string name="detail_alamat">Detail Alamat</string>
    <string name="ubah_password">Ubah Password</string>
    <string name="link_account">Hubungkan Akun</string>
    <string name="kategori_produk">Kategori/Produk</string>
    <string name="informasi_toko">Informasi Toko</string>
    <string name="logout_akun">Logout Akun?</string>
    <string name="keluar_halaman">Keluar Halaman?</string>
    <string name="konfirmasi_pesanan_">Konfirmasi Pesanan?</string>
    <string name="ubah_status_pesanan">Ubah status pesanan?</string>
    <string name="hapus_produk_selected">Hapus %1$d produk terpilih?</string>
    <string name="msg_logout">Anda akan keluar dari Akun sekarang</string>
    <string name="hapus_produk_dipilih">Semua produk yang dipilih akan dihapus dari Keranjang</string>
    <string name="msg_alamat">Perubahan alamat akan dibatalkan. Semua perubahan tidak akan disimpan</string>
    <string name="msg_konf_pesanan">Pesanan akan ditambahkan ke daftar transaksi.</string>
    <string name="kirim_tautan_ke_email">Tautan akan di kirim ke email %1$s</string>
    <string name="sts_psnsn_ubah_mjd">Status pesanan akan diubah menjadi %1$s</string>
    <string name="msg_del_kategori">Kategori %1$s akan dihapus secara permanen bersama dengan daftar produk didalamnya.</string>
    <string name="msg_keranjang_kosong">Keranjang masih kosong</string>
    <string name="desc_keranjang_kosong">Anda belum menambahkan produk ke keranjang.</string>
    <string name="msg_transaksi_kosong">Tidak ada transaksi</string>
    <string name="desc_transaksi_kosong">Anda masih belum melakukan transaksi.</string>
    <string name="msg_beranda_kosong">Produk masih kosong</string>
    <string name="desc_beranda_kosong">Kategori ini belum memiliki produk.</string>
    <string name="msg_cari_kosong">Hasil Pencarian Kosong</string>
    <string name="desc_cari_kosong_trx">Tidak dapat menemukan transaksi yang dicari.</string>
    <string name="desc_cari_kosong_prdk">Tidak dapat menemukan produk yang dicari.</string>
    <string name="atau">Atau masuk dengan</string>
    <string name="google">Google</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="daftar_akun">Daftar Akun</string>
    <string name="nama">Nama</string>
    <string name="nomor_telepon">Nomor telepon</string>
    <string name="nomor_telepon_optional">Nomor telepon (Optional)</string>
    <string name="alamat">Alamat</string>
    <string name="konfirmasi_password">Konfirmasi password</string>
    <string name="default_angka">0</string>
    <string name="default_text">null</string>
    <string name="antrian">Antrian</string>
    <string name="proses">Proses</string>
    <string name="selesai">Selesai</string>
    <string name="login_dulu">Silahkan login atau register untuk dapat mengakses halaman ini</string>
    <string name="masukkan_nomor_telepon_anda">Masukkan nomor telepon Anda</string>
    <string name="masukkan_nama_anda">Masukkan nama Anda</string>
    <string name="tidak_ada_data">Tidak ada data</string>
    <string name="jumlah_di_keranjang">%1$d produk dalam keranjang</string>
    <string name="total_harga">Total Harga</string>
    <string name="strip">-</string>
    <string name="nama_penerima">Nama penerima</string>
    <string name="nomor_telepon_penerima">Nomor telepon penerima</string>
    <string name="alamat_lengkap">Alamat lengkap</string>
    <string name="kode_pos">Kode pos</string>
    <string name="total_belanja">Total Belanja</string>
    <string name="total_ongkos_kirim">Total Ongkos Kirim</string>
    <string name="pesanan">Pesanan</string>
    <string name="no_pesanan_">No. Pesanan :</string>
    <string name="tanggal_pemesanan_">Tanggal Pemesanan :</string>
    <string name="status_pesanan_">Status Pesanan :</string>
    <string name="tambah_bukti_pembayaran">Tambahkan bukti pembayaran</string>
    <string name="belum_upload_bukti">Bukti pembayaran tidak ditemukan</string>
    <string name="atas_nama">Atas Nama</string>
    <string name="nominal_transfer">Nominal Transfer</string>
    <string name="nomor_rekening">Nomor Rekening</string>
    <string name="lupa_password_desc">Masukkan email yang terkait dengan akun Anda untuk mengubah kata sandinya.</string>
</resources>