<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_bottom_sheet"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageViewSlide"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:importantForAccessibility="no"
            android:src="@drawable/icon_round_horizontal_32"
            app:tint="@color/grey_500" />

        <androidx.core.widget.NestedScrollView
            android:id="@+id/nscroll_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fillViewport="true"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clipChildren="false"
                android:clipToPadding="false"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:paddingBottom="16dp">

                <TextView
                    android:id="@+id/title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:gravity="center"
                    android:paddingHorizontal="16dp"
                    android:textColor="@color/blue_grey_700"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        style="@style/textView.status.pesanan.title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/antrian" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="0.5dp"
                        android:layout_marginHorizontal="16dp"
                        android:background="@color/outline" />

                    <TextView
                        android:id="@+id/sts_tunggu_bayar"
                        style="@style/textView.status.pesanan.subtitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/status_menunggu_pembayaran" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="0.5dp"
                        android:layout_marginHorizontal="16dp"
                        android:background="@color/outline" />

                    <TextView
                        android:id="@+id/sts_tunggu_konfirm"
                        style="@style/textView.status.pesanan.subtitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/status_menunggu_konfirmasi" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="0.5dp"
                        android:layout_marginHorizontal="16dp"
                        android:background="@color/outline" />

                    <TextView
                        style="@style/textView.status.pesanan.title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/proses" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="0.5dp"
                        android:layout_marginHorizontal="16dp"
                        android:background="@color/outline" />

                    <TextView
                        android:id="@+id/sts_dlm_proses"
                        style="@style/textView.status.pesanan.subtitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/status_dalam_proses" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="0.5dp"
                        android:layout_marginHorizontal="16dp"
                        android:background="@color/outline" />

                    <TextView
                        android:id="@+id/sts_dlm_kirim"
                        style="@style/textView.status.pesanan.subtitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/status_dalam_pengiriman" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="0.5dp"
                        android:layout_marginHorizontal="16dp"
                        android:background="@color/outline" />

                    <TextView
                        style="@style/textView.status.pesanan.title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/selesai" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="0.5dp"
                        android:layout_marginHorizontal="16dp"
                        android:background="@color/outline" />

                    <TextView
                        android:id="@+id/sts_selesai"
                        style="@style/textView.status.pesanan.subtitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/status_selesai" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="0.5dp"
                        android:layout_marginHorizontal="16dp"
                        android:background="@color/outline" />

                    <TextView
                        android:id="@+id/sts_dibatalkan"
                        style="@style/textView.status.pesanan.subtitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/status_dibatalkan" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="0.5dp"
                        android:layout_marginHorizontal="16dp"
                        android:background="@color/outline" />
                </LinearLayout>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_pilih_status"
                    style="@style/materialbutton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginTop="24dp"
                    android:text="@string/simpan" />
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>