<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".RegisterGoogleActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:clipChildren="false"
            android:clipToPadding="false"
            android:orientation="vertical"
            android:padding="30dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_max="500dp">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="16dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clipChildren="false"
                    android:clipToPadding="false"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="24dp"
                        android:gravity="center"
                        android:text="@string/daftar_akun"
                        android:textAlignment="center"
                        android:textColor="?attr/colorPrimary"
                        android:textSize="24sp"
                        android:textStyle="bold" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/outline_nama_daftar"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:boxStrokeColor="?attr/colorPrimary"
                        app:counterEnabled="true"
                        app:counterMaxLength="30"
                        app:helperTextEnabled="true"
                        app:helperTextTextColor="@color/helper_text">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/nama_daftar"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:hint="@string/nama"
                            android:inputType="text|textPersonName|textCapSentences"
                            android:maxLength="30"
                            android:textSize="14sp" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/outline_nohp_daftar"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        app:boxStrokeColor="?attr/colorPrimary"
                        app:helperTextEnabled="true"
                        app:helperTextTextColor="@color/helper_text">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/nohp_daftar"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:hint="@string/nomor_telepon_optional"
                            android:inputType="phone"
                            android:maxLength="15"
                            android:textSize="14sp" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/outline_email_daftar"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:enabled="false"
                        app:boxStrokeColor="?attr/colorPrimary">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/email_daftar"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:hint="@string/email"
                            android:inputType="textEmailAddress"
                            android:textSize="14sp" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/outline_password_daftar"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        app:boxStrokeColor="?attr/colorPrimary"
                        app:helperTextEnabled="true"
                        app:helperTextTextColor="@color/helper_text"
                        app:passwordToggleEnabled="true"
                        app:passwordToggleTint="?attr/colorPrimary">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/password_daftar"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:hint="@string/password"
                            android:inputType="textPassword"
                            android:textSize="14sp" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/outline_konfirmasi_password_daftar"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        app:boxStrokeColor="?attr/colorPrimary"
                        app:helperTextEnabled="true"
                        app:helperTextTextColor="@color/helper_text"
                        app:passwordToggleEnabled="true"
                        app:passwordToggleTint="?attr/colorPrimary">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/konfirmasi_password_daftar"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:hint="@string/konfirmasi_password"
                            android:inputType="textPassword"
                            android:textSize="14sp" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btn_register"
                        style="@style/materialbutton.this"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="28dp"
                        android:enabled="false"
                        android:text="@string/register"
                        android:textColor="@color/white"
                        android:textSize="14sp"
                        app:cornerRadius="99dp" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btn_cancel"
                        style="@style/materialOutlinedButton.red"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/batalkan"
                        android:textSize="14sp"
                        app:strokeColor="?attr/colorPrimary" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>